# ikaria

./: .gitignore  AGENTS.md  Cargo.toml  Taskfile.yml
.github/agents/: ikaria-client-bevy.agent.md  ikaria-client-web.agent.md  ikaria-design-system.agent.md  ikaria-requirement-auditor.agent.md  ikaria-schema-guardian.agent.md  ikaria-server-spacetimedb.agent.md  ikaria-taskfile-guardian.agent.md  ikaria-workspace-engineer.agent.md
.github/skills/ikaria-client-bevy/: SKILL.md
.github/skills/ikaria-client-web/: SKILL.md
.github/skills/ikaria-design-system/: SKILL.md
.github/skills/ikaria-requirement-lockstep/: SKILL.md
.github/skills/ikaria-rust-workspace/: SKILL.md
.github/skills/ikaria-server-schema-constraints/: SKILL.md
.github/skills/ikaria-server-spacetimedb/: SKILL.md
.github/skills/ikaria-taskfile-workflow/: SKILL.md
bins/client/: Cargo.toml
bins/client/src/: main.rs
bins/ikaria/: AGENTS.md  Cargo.toml  GAME_STRUCTURE.md  SPACETIMEDB_RUST_SDK.md
bins/ikaria/config/: worlds.json
bins/ikaria/src/: app_state.rs  constants.rs  error.rs  events.rs  external_resources.rs  file_manager.rs  main.rs  resources.rs  ui_helpers.rs  ui_style.rs  worlds.rs
bins/ikaria/src/features/: character_select.rs  mod.rs  sign_in.rs
bins/ikaria/src/screens/: character_select_screen.rs  character_select_screen_ui.rs  game_screen.rs  game_screen_ui.rs  mod.rs  sign_in_screen.rs  sign_in_screen_ui.rs
bins/ikariadb/: AGENTS.md  Cargo.toml  Taskfile.yml
bins/ikariadb/src/: lib.rs
bins/server/: AGENTS.md  Cargo.toml  Taskfile.yml
bins/server/src/: main.rs
bins/server/tools/: spacetime_login.sh
bins/world-alpha-ikariadb/: Cargo.toml
bins/world-alpha-ikariadb/src/: lib.rs
bins/world-beta-ikariadb/: Cargo.toml
bins/world-draconis-ikariadb/: Cargo.toml
bins/world-draconis-ikariadb/src/: lib.rs
client/: README.md  Taskfile.yml  eslint.config.js  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css  worlds.ts
prompts/: spacetimedb-2.0-react-hooks-research.md
sdks/ikariadb-core/: AGENTS.md  Cargo.toml
sdks/ikariadb-core/src/: constants.rs  lib.rs
sdks/ikariadb-core/src/extend/: iter.rs  mod.rs  validate.rs
sdks/ikariadb-core/src/repository/: account.rs  character.rs  event.rs  item.rs  mod.rs  user.rs  world.rs
sdks/ikariadb-core/src/repository/character/: reducers.rs  services.rs  views.rs
sdks/ikariadb-core/src/repository/event/: services.rs  types.rs
sdks/ikariadb-core/src/repository/user/: views.rs
sdks/ikariadb-core/src/repository/world/: views.rs
sdks/types/: Cargo.toml
server/: .gitignore  Taskfile.yml
todo/: AUTHENTICATION_STRATEGY.md  GAME_PLAN.md
(+113 files in other folders)
