[workspace]
members = ["bins/*", "sdks/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
publish = false

[workspace.dependencies]
ikaria-types = { path = "sdks/types" }
ikaria-shared = { path = "sdks/shared" }

bevy = { version = "0.18.0", features = ["dynamic_linking"] }
log = { version = "0.4.29", features = ["max_level_debug", "release_max_level_warn"] }
spacetimedb = { version = "1.12.0" }
spacetimedb-sdk = { version = "1.12.0" }
thiserror = { version = "2.0.18" }
