[package]
name = "ikaria"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
ikaria-types = { workspace = true }
ikaria-shared = { workspace = true }

bevy = { workspace = true, features = ["dynamic_linking"] }
log = { workspace = true, features = ["max_level_info", "release_max_level_info"] }
spacetimedb-sdk = { workspace = true }
thiserror = { workspace = true }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = "debuginfo"
