[package]
name = "ikariadb-core"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
ikaria-shared = { workspace = true }

log = { workspace = true, features = ["max_level_info", "release_max_level_info"] }
spacetimedb = { workspace = true }
thiserror = { workspace = true }